--- a/client/app/shared/components/address/address.component.scss
+++ b/client/app/shared/components/address/address.component.scss
@@ -1,5 +1,5 @@
 .double-fields > * {
-    width: calc(((400px - 2 * 12px) - 10px) / 2);
+    width: calc(((399px - 2 * 12px) - 10px) / 2);
     min-width: 0;
 }
 
